Added content and an image in the roti.html file

--- a/recipes/roti.html
+++ b/recipes/roti.html
@@ -7,5 +7,11 @@
     <body>
         <a href="../index.html">Home</a>
         <h1>How to make a Roti smooth like butter?</h1>
+        <img src="./roti.jpg" alt="A smooth tasty roti"/>
+        <h3>Description</h3>
+        <p>
+            Hello readers of this webpage, in today's edition of creating with Mr. Creator we'll learn about how to make a <em>Roti</em>.
+            A roti is a form of bread very popular in northern part of India.  
+        </p>
     </body>
 </html>
