Added the ingredients list and steps to make the recipe

--- a/recipes/roti.html
+++ b/recipes/roti.html
@@ -13,5 +13,24 @@
             Hello readers of this webpage, in today's edition of creating with Mr. Creator we'll learn about how to make a <em>Roti</em>.
             A roti is a form of bread very popular in northern part of India.  
         </p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Wheat Flour - 500 g</li>
+            <li>Water - 250 ml</li>
+            <li>Salt - 1 tbsp</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Take the wheat flour and 1 tbsp salt in it.</li>
+            <li>Slowly add water in the flour while mixing both water and flour.</li>
+            <li>Make a dough.</li>
+            <li>Make small dough balls from the dough.</li>
+            <li>Using those dough balls create circular discs using a rolling pin.</li>
+            <li>Now, take a flat pan and put it on the gas stove.</li>
+            <li>After the pan has become adequately hot, put the roti on it.</li>
+            <li>Cook the roti from both the sides by flipping it after every few seconds.</li>
+            <li>One the roti is moderately cooked, remove the pan from the stove and cook the roti directly on the flames.</li>
+            <li>Your roti it ready, serve is hot with sabji and ghee.</li>
+        </ol>
     </body>
 </html>
