--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/roti.html">Roti</a>
+        <ul>
+            <li><a href="./recipes/roti.html">Roti</a></li>
+            <li><a href="./recipes/masala_chai.html">Masala Chai</a></li>
+            <li><a href="./recipes/poha.html">Poha</a></li>
+        </ul>
     </body>
 </html>
