added universal styles to all the pages

--- a/recipes/roti.html
+++ b/recipes/roti.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link href="../style.css" rel="stylesheet">
         <title>Roti Recipe</title>
     </head>
     <body>
@@ -30,7 +31,7 @@
             <li>After the pan has become adequately hot, put the roti on it.</li>
             <li>Cook the roti from both the sides by flipping it after every few seconds.</li>
             <li>One the roti is moderately cooked, remove the pan from the stove and cook the roti directly on the flames.</li>
-            <li>Your roti it ready, serve is hot with sabji and ghee.</li>
+            <li>Your roti is ready, serve is hot with sabji and ghee.</li>
         </ol>
     </body>
 </html>
