--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link href="./style.css" rel="stylesheet">
         <title>Odin Project HTML Foundations Assignment</title>
     </head>
     <body>
