--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
         <title>Odin Project HTML Foundations Assignment</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="./recipes/roti.html">Roti</a></li>
-            <li><a href="./recipes/masala_chai.html">Masala Chai</a></li>
-            <li><a href="./recipes/poha.html">Poha</a></li>
-        </ul>
+        <div class="container">
+            <h1 id="heading">Odin Recipes</h1>
+            <ul>
+                <li><a href="./recipes/roti.html">Roti</a></li>
+                <p>whole wheat flatbread</p>
+                <p class="dots">∗ ∗ ∗</p>
+                <li><a href="./recipes/masala_chai.html">Masala Chai</a></li>
+                <p>Spiced aromatic tea</p>
+                <p class="dots">∗ ∗ ∗</p>
+                <li><a href="./recipes/poha.html">Poha</a></li>
+                <p>Fluffy tempered rice</p>
+            </ul>
+        </div>
     </body>
 </html>
